src/test/ui/resolve/resolve-conflict-import-vs-import.stderr
error[E0252]: the name `transmute` is defined multiple times
  --> $DIR/resolve-conflict-import-vs-import.rs:2:5
   |
LL | use std::mem::transmute;
   |     ------------------- previous import of the value `transmute` here
LL | use std::mem::transmute;
   |     ^^^^^^^^^^^^^^^^^^^ `transmute` reimported here
   |
   = note: `transmute` must be defined only once in the value namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0252`.
